[package]
name = "daily_pill"       # Replace with your project name
version = "0.1.0"
edition = "2021"

[dependencies]
# For JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }

# For making HTTP requests
reqwest = { version = "0.11", features = ["json"] }

# For async runtime
tokio = { version = "1.28", features = ["full"] }